toy_tribe/static/css/style.css
/* ... */
.select-wrapper>ul>li>span:hover {
    color:#333A3F;
    font-weight: bolder;
    background-color: #FFF3D3;
}

#add-toy-button {
    font-size: 1.5rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
    margin-bottom: 50px;    
}

.form-required {
    color: #D02847;
}

/* ---------- edit_toy.html ---------- */
/* Edit toy title */
#edit-toy-title {
    display: flex;
    justify-content: center;
}

#edit-toy-title img {
    height:50px;
}

#edit-toy-title span {
    color: #333A3F;
    padding-left: 15px;
}

/* Edit toy form */
#edit-toy-form {
    max-width: min(600px, 85%);
    margin: 0 auto; 
}

#edit-toy-form label {
    color: #333A3F;
    font-size: 1rem;
}

.edit-toy-input {
    margin-top: 20px;
}

.edit-toy-input #description {
    font-family: "Roboto", Arial, Helvetica, sans-serif;
    overflow: auto;
    height: 200px;
    background-color: #FFF3D3;
}

#edit-toy-button {
    font-size: 1.5rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
    margin-bottom: 50px;    
}

/* ---------- individual_toy.html ---------- */
/* Individual toy title */
#individual-toy-title {
    text-align: center;
    color:#333A3F;
}

/* Toy content */
.toy-row {
    margin: 0 auto;
    max-width: 800px;
}

.toy-image {
    max-height: 70vh !important;
    max-width: 750px;
    width: auto !important;
    margin: 0 auto;
}

.toy-information-display .card-image {
    background-color: rgba(255, 243, 211, 0.55);
    padding: 10px;
}

.individual-toy-star-rating {
    font-size: 2rem;
    position: relative;
    z-index: 1;
    padding: 10px 20px;
    border-radius: 20px;
    border: 2px solid #333A3F;
    background-color: #D02847;
}

.review-strength {
    text-align: center;
    margin: 0;
    color:#333A3F;
    font-size: 1rem;
    font-weight: bolder;
}

.individual-toy-no-reviews {
    font-size: 1rem;
    position: relative;
    z-index: 2;
    padding: 5px 10px;
    border: 2px solid #333A3F;
    border-radius: 10px;
    color: #333A3F;
    background-color: #FFF3D3;
}

/* Toy table information */
.individual-toy-information {
    background-color: #D02847;
    border-color: #333A3F;
}

.toy-col-1 {
    color:#f5f5f5;
    width: 30%;
    font-weight: bolder;
}

.toy-col-2 {
    color:#f5f5f5;
}

.toy-col-1, .toy-col-2 {
    border-top: 2pt solid #FFF3D3;
    border-bottom: 2pt solid #FFF3D3;
}

/* Toy buttons */
.individual-toy-buttons-div{
    display: flex;
    justify-content: space-evenly;
    margin-top: 25px;
}

.individual-toy-buttons {
    background-color: #f5f5f5;
    color: #333A3F;
}

.individual-toy-buttons:hover, .individual-toy-buttons:focus {
    background-color: #FFF3D3;
    font-size: 1.1rem;
}

/* Individual toy reviews */
.show-reviews{
    margin: 0 auto;
    max-width: min(800px, 85%);
    position: relative;
}

#toy-review-title {
    text-align: center;
    color: #D02847;
    font-size: 4rem;
    text-shadow: #333A3F;
}

.review-row {
    border: 1pt solid #F6D36A;
    box-shadow: 5px 5px #F6D36A;
    background-color: #FFF3D3;
}

.review-author {
    font-size: 1.3rem;
    height: 4rem;
}

.review-rating {
    text-align: right;
    height: 4rem;
}

.review-rating-stars {
    font-size: 1.5rem;
    margin: auto 0;
    margin-top: 1.5rem;
}

.review-name-divider {
    border-top: 1px solid #F6D36A;
}

.review-content-box {
    overflow: auto;
    max-height: 300px;
}

.carousel {
    height: 250px;
}

.carousel-divider {
    border: 2px solid #D02847;
    border-radius: 1px;
    width: 50%;
}

.also-liked-title {
    margin-bottom: 0;
    text-align: center;
    font-size: 1.3rem;
    font-weight: bold;
}

.carousel-toy {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.carousel-item {
    height: 225px !important;
    width: 225px !important;
    text-align: center;
}

.carousel-name-container {
    width: 100%;
    background: rgba(0, 0, 0, 0.4);
    position: relative;
    max-height: 200px;
    overflow: auto;
}
.liked-toy-link {
    display: block;
    color: #FFF3D3;
    font-size: 1.5rem;
}

.review-divider {
    margin-bottom: 14px;
    border: 2px dashed #D02847;
    width: 100%;
}

/* Toy review buttons */
.review-buttons {
    margin-bottom: 10px;
    text-align: center;
}
.review-toy-buttons-div{
    display: flex;
    justify-content: space-evenly;
    margin-top: 25px;
}

.review-toy-buttons {
    background-color: #f5f5f5;
    color: #333A3F;
}

.review-toy-buttons:hover, .review-toy-buttons:focus {
    background-color: #D02847;
    color: #FFF3D3;
    font-size: 1.1rem;
}

/* ---------- add_review.html ---------- */
/* Add review title */
#add-review-title {
    display: flex;
    justify-content: center;
}

#add-review-title img {
    height:50px;
}

#add-review-title span {
    color: #333A3F;
    padding-left: 15px;
}

/* Add review form */
#add-review-form {
    max-width: min(600px, 85%);
    margin: 0 auto; 
}

#add-review-form label {
    color: #333A3F;
    font-size: 1rem;
}

.add-review-input {
    margin-top: 20px;
}

.add-review-input textarea {
    background-color: #FFF3D3;
    height: 200px;
}

.submit-failure {
    font-size: 0.8rem;
    font-weight: bolder;
    color: #D02847;
    margin-bottom: 10px;
}

#add-review-button {
    font-size: 1.5rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
    margin-bottom: 50px;    
}

/* ---------- edit_review.html ---------- */
/* Edit review title */
#edit-review-title {
    text-align: center;
    margin: 10px;
}
#edit-review-title img {
    height: 50px;
    margin-top: 10px;
}

/* Edit review form */
#edit-review-form {
    max-width: min(600px, 85%);
    margin: 0 auto; 
}

#edit-review-form label {
    color: #333A3F;
    font-size: 1rem;
}

.edit-review-input {
    margin-top: 20px;
}

.edit-review-input textarea {
    background-color: #FFF3D3;
    height: 200px;
}
/* ... */

